--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -10,3 +10,6 @@
 
   <input type="submit" value="Sign up">
 </form>
+
+<!-- from auth.js routes /signup -->
+<!-- set up some partials for each one of those pages to return the same flash -->
