[model] Add model for weapons

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -25,7 +25,7 @@
         </ul>
       </nav>
     </header>
-    <h1>Express_Auth_ap</h1>
+    <h1>Monster Hunter Helper 🎮</h1>
     <%- body %>
   </body>
 </html>
