[routes] Add route file for armor.js and monster.js and also added in views armor.ejs and monster.ejs

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,7 +5,7 @@ nav ul li {
 }
 
 h1 {
-  color: chartreuse;
+  color: rgb(4, 79, 102);
 }
 
 /* grab bootstrap alert success make sure to install */
