--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,1 +1,11 @@
 <h2>Monster Hunter Helper 🎮</h2>
+
+<div>
+    <h1><a href="/monsters">Monsters 🦖</a></h1>
+</div>
+<div>
+    <h1><a href="/weapon">Weapons ⚔️</a></h1>
+</div>
+<div>
+    <h1><a href="/armor">Armor ⚒</a></h1>
+</div>
