--- a/views/weapons.ejs
+++ b/views/weapons.ejs
@@ -1,4 +1,13 @@
 <h1>Weapons page</h1>
 <div id="wep">
-    
+  <% if(weapons.length) { %> <% weapons.forEach(w =>{%>
+  <ul>
+    <a href="/weapon/<%= w.name%>">
+      <h2><%= w.name %></h2>
+    </a>
+  </ul>
+
+  <% }) %> <% } else{ %>
+  <h2>No weapons shown</h2>
+  <% } %>
 </div>
