[data] Add data now viewable page was not refreshing propery because it wasnt resetting so stop using node server.js and used nodemon. long load time

--- a/views/weapons.ejs
+++ b/views/weapons.ejs
@@ -2,12 +2,14 @@
 <div id="wep">
   <% if(weapons.length) { %> <% weapons.forEach(w =>{%>
   <ul>
-    <a href="/weapon/<%= w.name%>">
-      <h2><%= w.name %></h2>
+    <a href="/weapon/<%= w.type%>">
+      <h2><%= w.type %></h2>
+      <p><%= w.name %> </p>
     </a>
   </ul>
 
-  <% }) %> <% } else{ %>
+  <% }) %> 
+  <% } else{ %>
   <h2>No weapons shown</h2>
   <% } %>
 </div>
