[readme] Add readme explanation for weapons route controller and weapons.ejs

--- a/views/weapons.ejs
+++ b/views/weapons.ejs
@@ -1,10 +1,13 @@
 <h1>Weapons page</h1>
+
 <div id="wep">
   <% if(weapons.length) { %> <% weapons.forEach(w =>{%>
   <ul>
     <a href="/weapon/<%= w.type%>">
       <h2><%= w.type %></h2>
       <p><%= w.name %> </p>
+    <%= console.log(w.assets) %> 
+
     </a>
   </ul>
 
