[imgae] Add image, error cannot read property of image of null? using w.assets.image, w.assets shows objects, image and icon is in there so why cant get image?

--- a/views/weapons.ejs
+++ b/views/weapons.ejs
@@ -4,9 +4,10 @@
   <% if(weapons.length) { %> <% weapons.forEach(w =>{%>
   <ul>
     <a href="/weapon/<%= w.type%>">
-      <h2><%= w.type %></h2>
+      <h2>Weapon Type: <%= w.type %></h2>
       <p><%= w.name %> </p>
-    <%= console.log(w.assets) %> 
+     <img src="<%= w.assets.image %> " alt="">
+    
 
     </a>
   </ul>
