[information] Add information for each weapon, armor, and dragon and have get route to reach it from index.ejs href

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,7 @@
 <h2>Monster Hunter Helper 🎮</h2>
-
 <div>
-    <h1><a href="/monsters">Monsters 🦖</a></h1>
+    <!-- the /monster route is being guided to monster folder and shows the monsters.ejs and whats in it -->
+    <h1><a href="/monster">Monsters 🦖</a></h1>
 </div>
 <div>
     <h1><a href="/weapon">Weapons ⚔️</a></h1>
@@ -9,3 +9,13 @@
 <div>
     <h1><a href="/armor">Armor ⚒</a></h1>
 </div>
+<p>
+  This app can provide guindance for players, and give a faster way to access
+  information they need for their items. For example, the Monster weakness and
+  its items drops. Once the player clicks on the Monster it will show what the
+  monster drops, and can make their judgement wether this Monster is worth their
+  time. This helpful information can also be used to see the different
+  attributes of Armor and its stats, and the same can go for the weapons. Also
+  pictures always adds the cool factor how the armor looks along with the
+  Monster they would have to face. Happy hunting they would say.
+</p>
