[render] Add user able to redirect to home page

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -20,6 +20,7 @@
          <% } else { %>
           <li><a href="/auth/logout">Logout</a></li>
           <li><a href="/profile">Profile</a></li>
+          <li><a href="/profile">Profile</a></li>
           <% } %>
           <!-- need middleware for authorization in middleware folder -->
         </ul>
