[loop] Add for loop to iterate through the array of objects. Thanks from instructor Rome

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -20,7 +20,7 @@
          <% } else { %>
           <li><a href="/auth/logout">Logout</a></li>
           <li><a href="/profile">Profile</a></li>
-          <li><a href="/profile">Profile</a></li>
+          <li><a href="/home">Home Page</a></li>
           <% } %>
           <!-- need middleware for authorization in middleware folder -->
         </ul>
