--- a/views/weapons/show.ejs
+++ b/views/weapons/show.ejs
@@ -1,7 +1,43 @@
 <!-- <a href="/home">Home Page</a> -->
 <h1>Weapon show page. Show the details</h1>
 
-<%= weapons.name %> 
+<h1><%= weapons.name %> </h1>
+<ul>
+    <img src="<%= weapons.assets.image%>" alt="">
+    <li>Rarity: <%= weapons.rarity%></li>
+    <li>Attack Damage: <%= weapons.attack.display%></li>
+    <li> Damage Type: <%= weapons.damageType%></li>
+</ul>
+
+<div>
+    <h2>Durability</h2>
+    <ul> 
+        <li>red: <%= weapons.durability[0].red %></li>
+        <li>orange: <%= weapons.durability[0].orange %></li>
+        <li>yellow: <%= weapons.durability[0].yellow %></li>
+        <li>green: <%= weapons.durability[0].green %></li>
+        <li>blue: <%= weapons.durability[0].blue %></li>
+        <li>white: <%= weapons.durability[0].white %></li>
+        <li>purple: <%= weapons.durability[0].purple %></li>
+    </ul>
+</div>
+
+<div>
+    <h2>Crafting</h2>
+    <ul>
+        <li>Craftable: <%= weapons.crafting.craftable %></li>
+        <li>Crafting Tree routes: <%= weapons.crafting.branches[0] %></li>
+        <p> Crafting Materials</p>
+        <li>Id: <%= weapons.crafting.craftingMaterials[0].item.id%></li>
+        <li>Rarity: <%= weapons.crafting.craftingMaterials[0].item.rarity%></li>
+        <li>Carry Limit: <%= weapons.crafting.craftingMaterials[0].item.carryLimit%></li>
+        <li>Value: <%= weapons.crafting.craftingMaterials[0].item.value%></li>
+        <li>Item Name: <%= weapons.crafting.craftingMaterials[0].item.name%></li>
+        <li>Description: <%= weapons.crafting.craftingMaterials[0].description%></li>
+       
+    </ul>
+</div>
+
     
 
 <form method="POST" action="/weapon/<%= weapons.name %>">
