--- a/views/weapons/weapons.ejs
+++ b/views/weapons/weapons.ejs
@@ -1,3 +1,4 @@
+
 <h1>Weapons page</h1>
 
 <div>
@@ -9,6 +10,7 @@
     </a>
     
   <img src="" alt="" />
+<button class="favorite" data-name="<%= w.name %>" data-cat="weapon">Favorite</button>
 
   <% }) %> 
   <% } else { %>
