--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <title>Express_Auth_ap</title>
     <link rel="stylesheet" href="/css/style.css">
   </head>
@@ -27,5 +28,6 @@
       </nav>
     </header>
     <%- body %>
+    <script src="/js/index.js" ></script>
   </body>
 </html>
