--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,3 +1,17 @@
 <h2>Profile Page</h2>
-
 <h3>Welcome to your PROFILE</h3>
+<h4>Add a Profile picture</h4>
+
+<div>
+    <h3>Here is the Weapons you've added</h3>
+    
+    <!-- weapons.name -->
+</div>
+<div>
+    <h3>Here is the Armomr you've added</h3>
+    <!-- armor.name -->
+</div>
+<div>
+    <h3>Here is the Monsters you've added</h3>
+    <!-- monster.name -->
+</div>
