[models] Add models for armor and monster. And when clicking add fave they show up in the models with the userId that is currently logged in. but i dont know how to show it on the page

--- a/views/armor/armors.ejs
+++ b/views/armor/armors.ejs
@@ -7,7 +7,10 @@
     <a href="/armor/<%= a.id %>">
       <p>Armor Name: <%= a.name %></p>
       </a>
-    <img src="" alt="" />
+      <form method="POST" action="/aFave">
+      <input hidden type="text" name="name" value="<%= a.name %>">
+      <button href="/views/<%= a.name%>" class="btn btn-primary" type="submit">Add to Favorites</button>
+    </form>
   
     <% }) %> 
     <% } else { %>
