--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,17 +1,22 @@
-<h2>Profile Page</h2>
 <h3>Welcome to your PROFILE</h3>
 <h4>Add a Profile picture</h4>
 
 <div>
-    <h3>Here is the Weapons you've added</h3>
-   
-    <!-- weapons.name -->
+  <h3>Here is the Weapons you've added</h3>
+  <% weapons.forEach(w =>{ %>
+  <a href="/weapon/<%= w.apiId %>">
+    <p><%= w.name %></p>
+  
+  </a>
+  <% }) %>
+  <!-- weapons.name -->
 </div>
 <div>
-    <h3>Here is the Armomr you've added</h3>
-    <!-- armor.name -->
+  <h3>Here is the Armomr you've added</h3>
+  <!-- armor.name -->
 </div>
 <div>
-    <h3>Here is the Monsters you've added</h3>
-    <!-- monster.name -->
+  <h3>Here is the Monsters you've added</h3>
+ 
+  <!-- monster.name -->
 </div>
