--- a/views/weapons/show.ejs
+++ b/views/weapons/show.ejs
@@ -1,4 +1,5 @@
 <a href="/weapon">Go Back to Weapons</a>
+<a href="/wepFave">Weapons Favorite</a>
 <h1>Weapon show page. Show the details</h1>
 
 <h1><%= weapons.name %> </h1>
