[Proc] add a Profile

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,3 +1,6 @@
+<a href="/wepFave">Weapons Favorite</a>
+<a href="/mFave">Monster Favorite</a>
+<a href="/aFave">Armor Favorite</a>
 <h1>Welcome to the home page Hunter</h1>
 
 
