--- a/views/wepFave.ejs
+++ b/views/wepFave.ejs
@@ -3,8 +3,12 @@
 <h3>Here is the Weapons you've added Hunter</h3>
 <ul>
   <% weapons.forEach(w =>{ %>
-  <a href="/weapon/<%= w.apiId %>">
-   <li><%= w.name %></li>
-  </a>
+  <a href="/weapon/<%= w.apiId %>"><li><%= w.name %></li></a>
+  <a href="/weapon/<%= w.apiId %>/edit">Edit</a>
+ 
+  <form method="POST" action="/wepFave/<%= w.id%>?_method=DELETE">
+    <!-- using req.params so no need for input id tag -->
+    <button type="submit">Delete</button>
+  </form>
   <% }) %>
 </ul>
