--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,15 +1,10 @@
-<a href="/wepFave">Weapons Favorite</a>
-<a href="/mFave">Monster Favorite</a>
-<a href="/aFave">Armor Favorite</a>
-<h1>Welcome to the home page Hunter</h1>
+
+<h1>Monster Hunter Home</h1>
 
 
-<div>
-    <h1><a href="/monster">Monsters 🦖</a></h1>
-</div>
-<div>
-    <h1><a href="/weapon">Weapons ⚔️</a></h1>
-</div>
-<div>
-    <h1><a href="/armor">Armor ⚒</a></h1>
+<div id="home">
+    <h1><a href="/monster">Monsters<img src="https://i.pinimg.com/236x/54/82/38/5482387937dd98440cfa845701c8ca75.jpg" alt=""></a></h1>
+    
+    <h1><a href="/weapon">Weapons <img src="https://www.1999.co.jp/itbig58/10583858.jpg" alt=""></a></h1>
+    <h1><a href="/armor">Armor <img src="https://monsterhunterworld.wiki.fextralife.com/file/Monster-Hunter-World/lavasioth_beta_armor_set_mhw_small.png" alt=""></a></h1>
 </div>
