--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,12 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Express_Auth_ap</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
+      integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css"
+    />
   </head>
-  <body>
+  <body id="body">
     <!-- partials here its in alerts folder partials/alerts.ejs -->
     <% include partials/alerts %>
     <header>
@@ -14,19 +25,27 @@
         <ul>
           <!-- if no current user show sign up and login page -->
           <% if (!currentUser) { %>
-            <li><a href="/auth/signup">Signup</a></li>
-            <li><a href="/auth/login">Login</a></li>
-            <!-- else if we have a user theyll only see logout and profile -->
-         <% } else { %>
+          <li><a href="/auth/signup">Signup</a></li>
+          <li><a href="/auth/login">Login</a></li>
+          <!-- else if we have a user theyll only see logout and profile -->
+          <% } else { %>
           <li><a href="/auth/logout">Logout</a></li>
           <li><a href="/profile">Profile</a></li>
           <li><a href="/home">Home Page</a></li>
+          <li><a href="/wepFave">Weapons Favorite</a></li>
+          <li><a href="/mFave">Monster Favorite</a></li>
+          <li><a href="/aFave">Armor Favorite</a></li>
           <% } %>
           <!-- need middleware for authorization in middleware folder -->
         </ul>
       </nav>
     </header>
     <%- body %>
-    
+
+    <script
+      src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"
+      integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
