--- a/views/weapons/show.ejs
+++ b/views/weapons/show.ejs
@@ -1,5 +1,5 @@
 <a href="/weapon">Go Back to Weapons</a>
-<a href="/wepFave">Weapons Favorite</a>
+
 <h1>Weapon show page. Show the details</h1>
 
 <h1><%= weapons.name %> </h1>
@@ -77,7 +77,14 @@
 </div>
 
     
-
+<% weapons.comment.forEach(comment => { %>
+    <div class="well">
+      <p>
+        <%= comment.name %> 
+        <%= comment.content %>
+      </p>
+    </div>
+    <% }) %>
 <form method="POST" action="/weapon/<%= weapons.name %>">
     <label for="name">Name</label>
     <input name="name" id="name" class="form-control" required><br>
@@ -85,3 +92,4 @@
     <textarea type="text" class="form-control" id="content" name="content" required></textarea>
     <input type="submit" class="btn btn-primary">
 </form>
+
